# bot

./: .gitignore  .gitmodules  README.md  database.db  main.py  phonebook.xlsx  pyproject.toml  script.sh  service.py
