[tool.poetry]
name = "InfoBot"
version = "0.1.0"
description = ""
authors = ["Divider <it-cio@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
aiohttp = "^3.8.1"
aiogram = "^2.20"
python-dotenv = "^0.20.0"
aiosqlite = "^0.17.0"
aioschedule = "^0.5.2"
beautifulsoup4 = "^4.11.1"
panoramisk = "^1.4"
pandas = "^1.4.2"
openpyxl = "^3.0.10"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
